--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,80 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8174ba">  <td>26/02/12 16:31:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.TestRunner@5876a9af]">runScenario</td> 
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>26/02/12 16:31:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.TestRunner@5876a9af]">runScenario</td> 
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>26/02/12 16:31:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.TestRunner@5876a9af]">runScenario</td> 
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>26/02/12 16:31:30</td>   <td>-18206</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runners.TestRunner@5876a9af]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.Testrunner@5876a9af]">runScenario</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>26/02/13 06:12:59</td>   <td>-964161</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRunner.Testrunner@5876a9af]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>26/02/12 16:31:56</td>   <td>7942</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runners.TestRunner@5876a9af]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="8174ba">  <td>26/02/13 06:29:23</td>   <td>18993</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRunner.Testrunner@5876a9af]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
 </table>
